--- a/assets/style.css
+++ b/assets/style.css
@@ -30,12 +30,6 @@ h1 {
     height: 30px;
 }
 
-/* Hides the current element */
-#hide {
-    clip: rect(0 0 0 0);
-    position: absolute;
-}
-
 /* modifies search box */
 #searchBox {
     height: 30px;
@@ -48,7 +42,7 @@ p {
     font: 200% bold;
     color: black;
     display: block;
-    padding-top: 10px;
+    padding-top: 3px;
 }
 
 /* modifiers for search button */
@@ -58,14 +52,29 @@ p {
 
 /* modifiers for boxes */
 .weatherBox {
-    display: inline-block;
+    display: none;
     width: 300px;
     height: 400px;
     border: 3px solid black;
     text-align: center;
-    margin: 20px;
+    margin: 2px;
+    margin-top: 50px;
     color: black;
+    margin-left: 20px;
     background-color: gray;
-    margin-left: 50px;
-    background-image: "";
 }
+
+#boxContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+/* .clear {
+    background-image: url("clear.jpg");
+    height: 400px;
+    width: 300px;
+    background-size: 100% 100%;
+    align-items: center;
+} */
