--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,6 @@ p {
     font: 200% bold;
     color: black;
     display: block;
-    padding-top: 3px;
 }
 
 /* modifiers for search button */
@@ -57,11 +56,10 @@ p {
     height: 400px;
     border: 3px solid black;
     text-align: center;
-    margin: 2px;
-    margin-top: 50px;
     color: black;
-    margin-left: 20px;
+    margin: 10px;
     background-color: gray;
+    border-radius: 20px;
 }
 
 #boxContainer {
@@ -69,6 +67,13 @@ p {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+#time {
+    color: black;
+    display: inline;
+    font-size: 100%;
+    padding: 10px;
 }
 
 /* .clear {
